# photo-booth

./: .gitignore  CHANGES.txt  CMakeLists.txt  Makefile  README.md  booths.cc  camera.hpp  config.hpp  config.yaml  drawing.hpp  gnome-menu  gnome.menu  locale.hpp  motion_detector.hpp  photo-booth.1  screen.hpp  sound.hpp  timer.hpp
cmake/Modules/: FindCairo.cmake
debian/: changelog  control  copyright  watch
debian/upstream/: metadata
locale/: photo-booth.pot
locale/es/LC_MESSAGES/: photo-booth.po
locale/zh/LC_MESSAGES/: photo-booth.po
sounds/: 104291__ryansnook__klaxon3.flac  116505__owdeo__transporter-beam.flac  254316__jagadamba__clock-tick.flac  26777__junggle__btn402.flac  3647__suonho__futuretrocomputing-10-suonho-remix.flac  51360__thecheeseman__camera-snap1.flac
